Added games on the homepage

--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@ title: "Home"
 ---
 <ul class="games">
     <li class="game">
-        <img src="" alt="Overwatch 2">
+        <a href="overwatch2.html"><img src="images/Overwatch2.png" alt="Overwatch 2"></a>
+        <figcaption>OVERWATCH 2</figcaption>
     </li>
     <li class="game">
-        <p>TEST</p>
+        <img src="images/diablo4.jpg" alt="Diablo IV">
+        <figcaption>DIABLO IV</figcaption>
     </li>
     <li class="game">
-        <p>TEST</p>
+        <img src="images/astral_onslaught.png" alt="Astral Onslaught">
+        <figcaption>ASTRAL ONSLAUGHT</figcaption>
     </li>
+    <li class="game">
+        <img src="images/Wormchelor.png" alt="The Wormchelor: The Card Game">
+        <figcaption>THE WORMCHELOR: CARD GAME</figcaption>
+    </li>
+    <li class="game">
+        <img src="images/astral_onslaught.png" alt="Astral Onslaught">
+        <figcaption>ASTRAL ONSLAUGHT</figcaption>
+    </li>
+    <li class="game">
+        <img src="images/astral_onslaught.png" alt="Astral Onslaught">
+        <figcaption>ASTRAL ONSLAUGHT</figcaption>
+    </li>
+    
 </ul>
