--- a/index.html
+++ b/index.html
@@ -12,20 +12,29 @@ title: "Home"
         <figcaption>DIABLO IV</figcaption>
     </li>
     <li class="game">
-        <img src="images/astral_onslaught.png" alt="Astral Onslaught">
-        <figcaption>ASTRAL ONSLAUGHT</figcaption>
-    </li>
-    <li class="game">
-        <img src="images/Wormchelor.png" alt="The Wormchelor: The Card Game">
+        <img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: The Card Game">
         <figcaption>THE WORMCHELOR: CARD GAME</figcaption>
     </li>
     <li class="game">
         <img src="images/astral_onslaught.png" alt="Astral Onslaught">
         <figcaption>ASTRAL ONSLAUGHT</figcaption>
     </li>
+    
     <li class="game">
-        <img src="images/astral_onslaught.png" alt="Astral Onslaught">
-        <figcaption>ASTRAL ONSLAUGHT</figcaption>
+        <img src="images/astral_onslaught.png" alt="Edo Edo Teishoku!">
+        <figcaption>EDO EDO TEISHOKU!</figcaption>
+    </li>
+    <li class="game">
+        <img src="images/astral_onslaught.png" alt="Adventure Assembly">
+        <figcaption>ADVENTURE ASSEMBLY</figcaption>
+    </li>
+    <li class="game">
+        <img src="images/astral_onslaught.png" alt="UCI-Ware">
+        <figcaption>UCI-WARE</figcaption>
+    </li>
+    <li class="game">
+        <img src="images/astral_onslaught.png" alt="You See, I Want to Declare My Major!">
+        <figcaption>YOU SEE, I WANT TO DELCARE MY MAJOR!</figcaption>
     </li>
     
 </ul>
