About me page & more tweaks
- need to fix the image in there though its messing everything up!!

--- a/index.html
+++ b/index.html
@@ -2,27 +2,15 @@
 layout: default
 title: "Home"
 ---
+
 <ul class="games">
     <li class="game">
-        <a href="overwatch2.html"><img src="images/Overwatch2.png" alt="Overwatch 2"></a>
+        <a href="overwatch2.html"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2"></a>
         <figcaption>OVERWATCH 2</figcaption>
     </li>
     <li class="game">
         <img src="images/diablo4.jpg" alt="Diablo IV">
         <figcaption>DIABLO IV</figcaption>
-    </li>
-    <li class="game">
-        <img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: The Card Game">
-        <figcaption>THE WORMCHELOR: CARD GAME</figcaption>
-    </li>
-    <li class="game">
-        <img src="images/astral_onslaught.png" alt="Astral Onslaught">
-        <figcaption>ASTRAL ONSLAUGHT</figcaption>
-    </li>
-    
-    <li class="game">
-        <img src="images/astral_onslaught.png" alt="Edo Edo Teishoku!">
-        <figcaption>EDO EDO TEISHOKU!</figcaption>
     </li>
     <li class="game">
         <img src="images/astral_onslaught.png" alt="Adventure Assembly">
@@ -33,8 +21,19 @@ title: "Home"
         <figcaption>UCI-WARE</figcaption>
     </li>
     <li class="game">
-        <img src="images/astral_onslaught.png" alt="You See, I Want to Declare My Major!">
-        <figcaption>YOU SEE, I WANT TO DELCARE MY MAJOR!</figcaption>
+        <img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: The Card Game">
+        <figcaption class="longerTitle">THE WORMCHELOR: CARD GAME</figcaption>
     </li>
-    
+    <li class="game">
+        <img src="images/astral_onslaught.png" alt="Edo Edo Teishoku!">
+        <figcaption>EDO EDO TEISHOKU!</figcaption>
+    </li>
+    <li class="game">
+        <img src="images/astral_onslaught.png" alt="Astral Onslaught">
+        <figcaption>ASTRAL ONSLAUGHT</figcaption>
+    </li>
+    <li class="game">
+        <img src="images/astral_onslaught.png" alt="You See, I Want to Declare My Major!">
+        <figcaption class="longerTitle">YOU SEE, I WANT TO DECLARE MY MAJOR!</figcaption>
+    </li>
 </ul>
