--- a/about.html
+++ b/about.html
@@ -3,4 +3,18 @@ layout: default
 title: "About Me"
 ---
 
-<p>hi</p>
+<ul class="aboutMe">
+    <li>
+        <img src="/images/diablo4.jpg" style="float: right;" alt="Me!">
+    </li>
+    <li style="padding: 5rem;">
+        <p style="display: inline">I am a </p>
+        <p class="customizable" id="aboutMe1" style="display: inline">game designer</p>
+        <div style="margin: 2rem 0 0 7rem">
+            <p style="display: inline">who</p>
+            <p class="customizable" id="aboutMe2" style="display: inline">makes games</p>
+            <p style="display: inline">!</p>
+        </div>
+    </li>
+</ul>
+
