Fixed welcome message
- I also forgot to mention that the last push added mobile responsiveness to the website

--- a/about.html
+++ b/about.html
@@ -8,13 +8,14 @@ title: "About Me"
         <img src="/images/diablo4.jpg" style="float: right;" alt="Me!">
     </li>
     <li style="padding: 5rem;">
-        <p style="display: inline">I am a </p>
-        <p class="customizable" id="aboutMe1" style="display: inline">game designer</p>
+        <p style="display: inline">I am </p>
+        <p class="customizable" id="aboutMe1" style="display: inline">a game designer</p>
         <div style="margin: 2rem 0 0 7rem">
             <p style="display: inline">who</p>
             <p class="customizable" id="aboutMe2" style="display: inline">makes games</p>
             <p style="display: inline">!</p>
         </div>
     </li>
+    <script src="aboutMeScript.js"></script> 
 </ul>
 
