--- a/about.html
+++ b/about.html
@@ -4,18 +4,19 @@ title: "About Me"
 ---
 
 <ul class="aboutMe">
-    <li>
-        <img src="/images/diablo4.jpg" style="float: right;" alt="Me!">
-    </li>
-    <li style="padding: 5rem;">
+    <li style="margin-top: 10%; margin-left: 10%;">
         <p style="display: inline">I am </p>
-        <p class="customizable" id="aboutMe1" style="display: inline">a game designer</p>
+        <p class="customizable" id="aboutMe1" style="display: inline;">a game designer</p>
         <div style="margin: 2rem 0 0 7rem">
             <p style="display: inline">who</p>
             <p class="customizable" id="aboutMe2" style="display: inline">makes games</p>
             <p style="display: inline">!</p>
         </div>
     </li>
+    <li>
+        <img src="/images/Me.jpg" style="margin-right: 10%;" alt="Me!">
+    </li>
+
     <script src="aboutMeScript.js"></script> 
 </ul>
 
