--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@ title: "Home"
         <figcaption>OVERWATCH 2</figcaption>
     </li>
     <li class="game">
-        <img src="images/diablo4.jpg" alt="Diablo IV">
+        <a href="diablo.html"><img src="images/DiabloIV/diablo4.jpg" alt="Diablo IV"></a>
         <figcaption>DIABLO IV</figcaption>
     </li>
-    <li class="game">
+    <!-- <li class="game">
         <img src="images/astral_onslaught.png" alt="Adventure Assembly">
-        <figcaption>ADVENTURE ASSEMBLY</figcaption>
+        <figcaption>ADVENTURE ASSEMBLY</figcaption> -->
     </li>
     <li class="game">
-        <img src="images/astral_onslaught.png" alt="UCI-Ware">
+        <img src="images/UCIWareIcon.png" alt="UCI-Ware">
         <figcaption>UCI-WARE</figcaption>
     </li>
     <li class="game">
@@ -26,7 +26,7 @@ title: "Home"
     </li>
     <li class="game">
         <img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: The Card Game">
-        <figcaption class="longerTitle">THE WORMCHELOR: CARD GAME</figcaption>
+        <figcaption class="longerTitle" style="font-size: 1.5rem;">THE WORMCHELOR: CARD GAME</figcaption>
     </li>
     <li class="game">
         <img src="images/astral_onslaught.png" alt="Astral Onslaught">
