--- a/overwatch2.html
+++ b/overwatch2.html
@@ -2,8 +2,39 @@
 layout: gamesLayout
 title: "Overwatch 2"
 ---
+<div style="width: 700px;">
+    <video controls autoplay loop muted>
+        <source src="images/Overwatch 2/Portfolio ScrapMouse Showcase MUSIC.mp4" type="video/mp4">
+        Your browser does not support the video tag.  
+    </video> 
+    <figcaption>My ScrapMouse hero showcase!</figcaption>
+</div>
+<div class="item">
+    <em>My role:</em>
+    <h2><strong>Hero Design Intern</strong></h2>
+    <h3>SPARX (Sophomore) Intern</h3>
+    <h3>June 2023 - September 2023 (3 Months)</h3>
+    <p>
+        <ul>
+            <li>Developed and iterated upon an original, fully playable Overwatch 2 hero.</li>
+            <li>Created multiple paper design prototype concepts, factoring in trade-offs and risks before deciding.</li>
+            <li>Scripted and became experienced using Overwatch 2’s proprietary design scripting language.</li>
+            <li>Led and participated in playtests and utilized feedback to optimize my own hero.</li>
+        </ul>
+    </p>
+</div>
+<div class="item">
+    <h2><em>Who is ScrapMouse?</em></h2>
+    <p>
+        <strong>ScrapMouse</strong> is an Overwatch 2 hero that I created during my 2023 internship at Blizzard.
+        She will <strong>NOT</strong> be released in Overwatch 2 as far as I know.
+        She is a medium-range DPS/damage hero who wields a homemade nail gun with a rebar launcher on top.
+        I wanted players to feel like a nimble, scrappy hero whose power snowballs as she continues to do more damage.
+        She is also a chaos-loving gremlin who named herself after Junkrat <em style="font-size: 1rem;">(Junk = Scrap, Rat = Mouse ... get it?)</em>.
 
-<video controls autoplay loop muted style="max-width: 50%;">
-    <source src="images/Overwatch 2/Portfolio ScrapMouse Showcase MUSIC.mp4" type="video/mp4">
-    Your browser does not support the video tag.  
-</video> 
+    </p>
+</div>
+<div class="item">
+    <img src="images/Overwatch 2/ScrapMouse.jpg" alt="A drawing of ScrapMouse by me!">
+    <figcaption>A drawing of ScrapMouse by me!</figcaption>
+</div>
