--- a/diablo.html
+++ b/diablo.html
@@ -1,18 +1,24 @@
 ---
-layout: gamesLayout
+layout: default
 title: "Diablo IV"
 ---
-
-<div class="item">
-    <img src="images/DiabloIV/ClayGolem.webp" alt="A screenshot from Diablo 2 featuring a Clay Golem.">
-    <figcaption>
-        Recently, I've been playing Diablo 2: Ressurected.
-        I'm a Necromancer whose bestfriend is a silly little clay golem.
-    </figcaption>
+<div class="topContainer">
+    <h1 class="gameTitle">{{ page.title }}</h1>
 </div>
 
-<div class="item">
-    <em>My *future* role:</em>
-    <h2><strong>Class Design Intern</strong></h2>
-    <h3>June 2024 - September 2024 (3 Months)</h3>
+<div class="gamesContainer">
+    <div class="item">
+        <img src="images/DiabloIV/ClayGolem.webp" alt="A screenshot from Diablo 2 featuring a Clay Golem.">
+        <figcaption>
+            Recently, I've been playing Diablo 2: Resurrected.
+            I'm a Necromancer whose bestfriend is a silly little clay golem.
+        </figcaption>
+    </div>
+
+    <div class="item">
+        <em>My *future* role:</em>
+        <h2><strong>Class Design Intern</strong></h2>
+        <h3>June 2024 - September 2024 (3 Months)</h3>
+        <p>I will update this page after my internship concludes in September!</p>
+    </div>
 </div>
