OOPSIES more small changes

--- a/UCIWare.html
+++ b/UCIWare.html
@@ -23,7 +23,8 @@ title: "UCI-Ware"
         <ul>
             <li>Created a WarioWare-inspired game based on the daily lives of UC Irvine students.</li>
             <li>Led a team of over 10 people, scheduling weekly meetings and managing tasks to meet deadlines.</li>
-            <li>Designed the gameplay of the microgames and created user interface and gameplay art assets</li>
+            <li>Designed the gameplay of the microgames.</li>
+            <li>Created user interface and some gameplay art assets.</li>
         </ul>
     </div>
 </div>
