MORE SMALL CHANGES SORRYYYY!!!

--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@ title: "About Me"
 ---
 
 <ul class="aboutMe">
-    <li style="max-width: 60%;">
-        <h1 style="margin-bottom: 2rem;">{{ page.title }}</h1>
-        <h2>I'm <strong>Francesca</strong>. <em style="font-size: 1.5rem;">(she/her)</em></h2>
+    <div class="aboutMeItem">
+        <h1>{{ page.title }}</h1>
+        <h2 style="font-size: 2.25rem;">I'm <strong>Francesca</strong>. <em style="font-size: 1.5rem;">(she/her)</em></h2>
         <p>I'm a UC Irvine student majoring in Game Design & Interactive media!
             I'm a big fan of roguelikes and I derive a lot of my inspiration from them.
         </p>
@@ -20,10 +20,10 @@ title: "About Me"
                 <p>!</p>
             </div>
         </div>
-    </li>
-    <li>
+    </div>
+    <div class="aboutMeItem">
         <img src="/images/Me.jpg" alt="Me!">
-    </li>
+    </div>
 </ul>
 <!--
 <p class="quote">"She has a large breadth of skills and show passion for her work and others’.
