About Me Update & New Edo Edo Image
- changed about me picture
- changed edo edo icon

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ title: "About Me"
         </div>
     </div>
     <div class="aboutMeItem">
-        <img src="/images/Me.jpg" alt="Me!">
+        <img src="/images/Me2.jpg" alt="Me!">
     </div>
 </ul>
 <!--
