--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@ title: "Home"
         <figcaption>UCI-WARE</figcaption>
     </div>
     <div class="game">
-        <a href="edoEdo.html"><img src="images/Edo Edo Teishoku!/EdoEdoIcon.png" alt="Edo Edo Teishoku!"></a>
+        <a href="edoEdo.html"><img src="images/Edo Edo Teishoku!/EdoTitleArt-SweetBoss.png" alt="Edo Edo Teishoku!"></a>
         <figcaption>EDO EDO TEISHOKU!</figcaption>
     </div>
-    <!-- <div class="game">
-        <img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: The Card Game">
+    <div class="game">
+        <a href="wormchelor.html"><img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: Card Game"></a>
         <figcaption class="longerTitle" style="font-size: 1.5rem;">THE WORMCHELOR: CARD GAME</figcaption>
-    </div> -->
+    </div>
     <div class="game">
         <a href="astralOnslaught.html"><img src="images/AstralOnslaught/astral_onslaught.png" alt="Astral Onslaught"></a>
         <figcaption>ASTRAL ONSLAUGHT</figcaption>
