Fixed formatting for mobile devices
- removed ": THE CARD GAME" from the Wormchelor's title on the homepage
- made it so that the font size gets smaller for screens under 400px wide

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: "Home"
     </div>
     <div class="game">
         <a href="wormchelor.html"><img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: Card Game"></a>
-        <figcaption class="longerTitle" style="font-size: 1.5rem;">THE WORMCHELOR: CARD GAME</figcaption>
+        <figcaption>THE WORMCHELOR</figcaption>
     </div>
     <div class="game">
         <a href="astralOnslaught.html"><img src="images/AstralOnslaught/astral_onslaught.png" alt="Astral Onslaught"></a>
