Updated about me and diablo page
- Added "currently playing" section to about me page
- added resume points to diablo 4 page
- updated resume points on overwatch 2 page

--- a/about.html
+++ b/about.html
@@ -2,9 +2,8 @@
 layout: default
 title: "About Me"
 ---
-
 <ul class="aboutMe">
-    <div class="aboutMeItem">
+    <div class="aboutMeItem" style="margin-bottom: 2rem;">
         <h1>{{ page.title }}</h1>
         <h2 style="font-size: 2.25rem;">I'm <strong>Francesca</strong>. <em style="font-size: 1.5rem;">(she/her)</em></h2>
         <p>I'm a UC Irvine student majoring in Game Design & Interactive media!
@@ -22,9 +21,31 @@ title: "About Me"
         </div>
     </div>
     <div class="aboutMeItem">
-        <img src="/images/Me2.jpg" alt="Me!">
+        <img style="max-width: 350px" src="/images/Me2.jpg" alt="Me!">
     </div>
 </ul>
+
+<hr>
+
+<div class="topContainer">
+    <h1 style="margin-top:1rem;">Currently Playing</h1>
+</div>
+
+<div class="homePageGames">    
+    <div class="game">
+        <a href="https://store.steampowered.com/app/948740/AI_The_Somnium_Files/"><img src="images/CurrentlyPlaying/AISomnium.png" alt="AI: The Somnium Files"></a>
+        <figcaption>AI: THE SOMNIUM FILES</figcaption>
+    </div>
+    <div class="game">
+        <a href="https://hearthstone.blizzard.com/en-us/battlegrounds/"><img src="images/CurrentlyPlaying/hearthstoneBattlegrounds.jpg" alt="Hearthstone Battlegrounds"></a>
+        <figcaption>HEARTHSTONE BATTLEGROUNDS</figcaption>
+    </div>
+    <div class="game">
+        <a href="https://store.steampowered.com/app/1997040/MARVEL_SNAP/"><img src="images/CurrentlyPlaying/marvelSnap.jpg" alt="Marvel Snap"></a>
+        <figcaption>MARVEL SNAP</figcaption>
+    </div>
+</div>
+
 <!--
 <p class="quote">"She has a large breadth of skills and show passion for her work and others’.
     She's not afraid to ask for help, and she's very attentive and responsive while receiving it."</p>
