--- a/diablo.html
+++ b/diablo.html
@@ -16,9 +16,18 @@ title: "Diablo IV"
     </div>
 
     <div class="item">
-        <em>My *future* role:</em>
         <h2><strong>Class Design Intern</strong></h2>
         <h3>June 2024 - September 2024 (3 Months)</h3>
-        <p>I will update this page after my internship concludes in September!</p>
+        <p>
+            <ul>
+                <li>Scripted with Lua in Diablo IV’s proprietary engine.</li>
+                <li>Created 3 skills from paper design to release for the Spiritborn class.</li>
+                <li>Prototyped multiple unreleased powers for an upcoming season.</li>
+                <li>Collaborated with other departments and worked around interdisciplinary constraints.</li>
+                <li>Organized playtests and iterated on prototypes based on feedback.</li>
+                <li>Fixed bugs and kept track of assigned tasks utilizing Jira.</li>
+                <li>Produced comprehensive living game design documents using Miro.</li>
+            </ul>
+        </p>
     </div>
 </div>
