--- a/diablo.html
+++ b/diablo.html
@@ -7,27 +7,37 @@ title: "Diablo IV"
 </div>
 
 <div class="gamesContainer">
+            <div class="item" style="max-width: 10%;">
+                <img src="images/DiabloIV/MenageristGlyph.png" alt="A screenshot from Diablo 2 featuring a Clay Golem.">
+                <figcaption>Menagerist Glyph</figcaption>
+            </div>
+            <div class="item" style="max-width: 10%;">
+                <img src="images/DiabloIV/ConsumptionGlyph.png" alt="A screenshot from Diablo 2 featuring a Clay Golem.">
+                <figcaption>Consumption Glyph</figcaption>
+            </div>
+
+    <div class="item">
+        <em>My role:</em>
+        <h2><strong>Class Design Intern</strong></h2>
+        <h3>June 2024 - September 2024 (3 Months)</h3>
+        <p>
+            <ul>
+                <li>Scripted with <strong>Lua</strong> in Diablo IV’s proprietary engine.</li>
+                <li>Created <strong>3 skills</strong> from paper design to <strong>release</strong> for the Spiritborn class.</li>
+                <li>Prototyped multiple unreleased <strong>powers</strong> for an <strong>upcoming season</strong>.</li>
+                <li>Collaborated with other departments and worked around <strong>interdisciplinary constraints</strong>.</li>
+                <li><strong>Organized playtests</strong> and iterated on prototypes based on feedback.</li>
+                <li>Fixed bugs and kept track of assigned tasks utilizing <strong>Jira</strong>.</li>
+                <li>Produced comprehensive living game design documents using <strong>Miro</strong>.</li>
+            </ul>
+        </p>
+    </div>
+
     <div class="item">
         <img src="images/DiabloIV/ClayGolem.webp" alt="A screenshot from Diablo 2 featuring a Clay Golem.">
         <figcaption>
             Recently, I've been playing Diablo 2: Resurrected.
             I'm a Necromancer whose bestfriend is a silly little clay golem.
         </figcaption>
-    </div>
-
-    <div class="item">
-        <h2><strong>Class Design Intern</strong></h2>
-        <h3>June 2024 - September 2024 (3 Months)</h3>
-        <p>
-            <ul>
-                <li>Scripted with Lua in Diablo IV’s proprietary engine.</li>
-                <li>Created 3 skills from paper design to release for the Spiritborn class.</li>
-                <li>Prototyped multiple unreleased powers for an upcoming season.</li>
-                <li>Collaborated with other departments and worked around interdisciplinary constraints.</li>
-                <li>Organized playtests and iterated on prototypes based on feedback.</li>
-                <li>Fixed bugs and kept track of assigned tasks utilizing Jira.</li>
-                <li>Produced comprehensive living game design documents using Miro.</li>
-            </ul>
-        </p>
     </div>
 </div>
