--- a/wormchelor.html
+++ b/wormchelor.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "The Wormchelor: Card Game"
+title: "The Wormchelor"
 ---
 <div class="topContainer">
     <h1 class="gameTitle">{{ page.title }}</h1>
@@ -17,9 +17,9 @@ title: "The Wormchelor: Card Game"
         <h2><strong>Team Lead, Gameplay Designer, Artist</strong></h2>
         <h3>September 2023 - December 3 (4 Months)</h3>
         <ul>
-            <li>Created a party game themed around worms where players use word combinations to try to impress the judge!</li>
-            <li>Lead meetings to hone our game's vision given a limited timeframe.</li>
-            <li>Hosted many playtests focused on creating a versatile game given a restriction on the number of cards our game could utilize.</li>
+            <li>Created a party game themed around <strong>worms</strong> where players use word combinations to try to impress the judge!</li>
+            <li>Led meetings to hone our game's <strong>vision</strong> given a limited timeframe.</li>
+            <li>Hosted many <strong>playtests</strong> focused on creating a versatile game given a restriction on the number of cards our game could utilize.</li>
         </ul>
     </div>
 </div>
