Updated about me & diablo page

--- a/about.html
+++ b/about.html
@@ -37,16 +37,12 @@ title: "About Me"
 
 <div class="homePageGames">    
     <div class="game">
-        <a href="https://store.steampowered.com/app/948740/AI_The_Somnium_Files/"><img src="images/CurrentlyPlaying/AISomnium.png" alt="AI: The Somnium Files"></a>
-        <figcaption>AI: THE SOMNIUM FILES</figcaption>
+        <a href="https://teamfighttactics.leagueoflegends.com/en-us/"><img src="images/CurrentlyPlaying/TFT.png" alt="Teamfight Tactics"></a>
+        <figcaption>TEAMFIGHT TACTICS</figcaption>
     </div>
     <div class="game">
-        <a href="https://hearthstone.blizzard.com/en-us/battlegrounds/"><img src="images/CurrentlyPlaying/hearthstoneBattlegrounds.jpg" alt="Hearthstone Battlegrounds"></a>
+        <a href="https://hearthstone.blizzard.com/en-us/battlegrounds/"><img src="images/CurrentlyPlaying/HearthstoneBattlegroundsSeason9.png" alt="Hearthstone Battlegrounds"></a>
         <figcaption>HEARTHSTONE BATTLEGROUNDS</figcaption>
-    </div>
-    <div class="game">
-        <a href="https://store.steampowered.com/app/1997040/MARVEL_SNAP/"><img src="images/CurrentlyPlaying/marvelSnap.jpg" alt="Marvel Snap"></a>
-        <figcaption>MARVEL SNAP</figcaption>
     </div>
 </div>
 
