--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@ title: "Home"
 
 <div class="homePageGames">
     <div class="game">
-        <a href="overwatch2.html"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2"></a>
-        <figcaption>OVERWATCH 2</figcaption>
-    </div>
-    <div class="game">
         <a href="diablo.html"><img src="images/DiabloIV/diablo4.jpg" alt="Diablo IV"></a>
         <figcaption>DIABLO IV</figcaption>
     </div>
-    <!-- <li class="game">
-        <img src="images/astral_onslaught.png" alt="Adventure Assembly">
-        <figcaption>ADVENTURE ASSEMBLY</figcaption>
-    </div> -->
+    <div class="game">
+        <a href="overwatch2.html"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2"></a>
+        <figcaption>OVERWATCH 2</figcaption>
+    </div>
+    
     <div class="game">
         <a href="UCIWare.html"><img src="images/UCIWare/UCIWareIcon.png" alt="UCI-Ware"></a>
         <figcaption>UCI-WARE</figcaption>
@@ -33,5 +30,8 @@ title: "Home"
         <a href="astralOnslaught.html"><img src="images/AstralOnslaught/astral_onslaught.png" alt="Astral Onslaught"></a>
         <figcaption>ASTRAL ONSLAUGHT</figcaption>
     </div>
-    -->
+    <li class="game">
+        <img src="images/astral_onslaught.png" alt="Adventure Assembly">
+        <figcaption>ADVENTURE ASSEMBLY</figcaption>
+    </div> -->
 </div>
