Added drivetalk & other small changes

--- a/about.html
+++ b/about.html
@@ -12,9 +12,12 @@ title: "About Me"
     </div>
 
     <div class="aboutMeItem">
-        <h2 style="font-size: 2.25rem;">I'm <strong>Francesca</strong>. <em style="font-size: 1.5rem;">(she/her)</em></h2>
-        <p>I'm a UC Irvine student majoring in Game Design & Interactive media!
-            I'm a big fan of roguelikes and I derive a lot of my inspiration from them.
+        <h2 style="font-size: 2.5rem;">I'm <strong>Francesca</strong>. <em style="font-size: 1.5rem;">(she/her)</em></h2>
+        <p>
+            <br>
+            I'm a <strong>UC Irvine</strong> student majoring in <strong>Game Design & Interactive Media</strong>!
+            As of March 2024, I'm also a <strong>Design officer</strong> at <strong>UCI's Video Game Development Club</strong>.
+            I'm a big fan of <strong>roguelikes</strong> and I derive a lot of my inspiration from them.
         </p>
         <div class="customizaAboutMe">
             <p>I am </p>
