--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@ title: "Home"
     </div>
     
     <div class="game">
+        <a href="drivetalk.html"><img src="images/drivetalk/drivetalk.png" alt="drivetalk"></a>
+        <figcaption>DRIVETALK</figcaption>
+    </div>
+
+    <div class="game">
         <a href="UCIWare.html"><img src="images/UCIWare/UCIWareIcon.png" alt="UCI-Ware"></a>
         <figcaption>UCI-WARE</figcaption>
     </div>
