Added favorite games to about me

--- a/about.html
+++ b/about.html
@@ -33,19 +33,19 @@ title: "About Me"
 </ul>
 
 <hr>
-
+<!--
 <div class="topContainer">
     <h1>Currently Playing</h1>
 </div>
 
 <div class="homePageGames">    
     <div class="game">
-        <a href="https://hearthstone.blizzard.com/en-us/battlegrounds/"><img src="images/CurrentlyPlaying/HearthstoneBattlegroundsSeason9.png" alt="Hearthstone Battlegrounds Season 9 Cover Art"></a>
-        <figcaption>HEARTHSTONE BATTLEGROUNDS</figcaption>
+        <a href="https://overwatch.blizzard.com/en-us/"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2 Cover Art"></a>
+        <figcaption>OVERWATCH 2</figcaption>
     </div>
     <div class="game">
-        <a href="https://store.steampowered.com/app/648100/Raging_Loop/"><img src="images/CurrentlyPlaying/RagingLoop.png" alt="Raging Loop Cover Art"></a>
-        <figcaption>RAGING LOOP</figcaption>
+        <a href="https://hearthstone.blizzard.com/en-us/battlegrounds/"><img src="images/CurrentlyPlaying/HearthstoneBattlegroundsSeason9.png" alt="Hearthstone Battlegrounds Season 9 Cover Art"></a>
+        <figcaption>HEARTHSTONE BATTLEGROUNDS</figcaption>
     </div>
     <div class="game">
         <a href="https://teamfighttactics.leagueoflegends.com/en-us/"><img src="images/CurrentlyPlaying/TFT.png" alt="Teamfight Tactics Season 13 Cover Art"></a>
@@ -53,6 +53,25 @@ title: "About Me"
     </div>
 </div>
 
+<hr>
+-->
+<div class="topContainer">
+    <h1>Favorite Games</h1>
+</div>
+<div class="homePageGames">    
+    <div class="game">
+        <a href="https://store.steampowered.com/app/1426300/The_Binding_of_Isaac_Repentance/"><img src="images/FavoriteGames/bindingOfIsaac.jpg" alt="The Binding of Isaac: Repentance Cover Art"></a>
+        <figcaption>THE BINDING OF ISAAC</figcaption>
+    </div>
+    <div class="game">
+        <a href="https://store.steampowered.com/app/3320/Insaniquarium_Deluxe/"><img src="images/FavoriteGames/insaniquarium.png" alt="Insaniquarium Cover Art"></a>
+        <figcaption>INSANIQUARIUM</figcaption>
+    </div>
+    <div class="game">
+        <a href="https://hearthstone.blizzard.com/en-us/battlegrounds/"><img src="images/FavoriteGames/hearthstonebattlegrounds.jpg" alt="Hearthstone Battlegrounds Cover Art"></a>
+        <figcaption>HEARTHSTONE BATTLEGROUNDS</figcaption>
+    </div>
+</div>
 <!--
 <p class="quote">"She has a large breadth of skills and show passion for her work and others’.
     She's not afraid to ask for help, and she's very attentive and responsive while receiving it."</p>
