--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ title: "About Me"
     </div>
     <div class="game">
         <a href="https://hearthstone.blizzard.com/en-us/battlegrounds/"><img src="images/FavoriteGames/hearthstonebattlegrounds.jpg" alt="Hearthstone Battlegrounds Cover Art"></a>
-        <figcaption>HEARTHSTONE BATTLEGROUNDS</figcaption>
+        <figcaption style="font-size: 1.5em;">HEARTHSTONE BATTLEGROUNDS</figcaption>
     </div>
 </div>
 <!--
