updated the colors for my name... oopsies

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ title: "About Me"
 
     <div class="aboutMeItem">
         <h2 style="font-size: 2.5rem;">I'm <strong>
-            <span style="color: hsl(270, 6%, 13%); text-decoration: underline;"><span style="color: #ea3959">F</span><span style="color: #ed4084">r</span><span style="color: #e454ad">a</span><span style="color: #d06bcf">n</span><span style="color: #b581e8">c</span><span style="color: #9394f7">e</span><span style="color: #6fa4fc">s</span><span style="color: #4fb2f7">c</span><span style="color: #4ab3f9">a</span></strong>. <em style="font-size: 1.5rem;">(she/her)</em></h2>
+            <span style="color: hsl(270, 6%, 13%); text-decoration: underline;"><span style="color: #ea3959">F</span><span style="color: #ed4084">r</span><span style="color: #e454ad">a</span><span style="color: #d06bcf">n</span><span style="color: #b581e8">c</span><span style="color: #9394f7">e</span><span style="color: #6fa4fc">s</span><span style="color: #4fb2f7">c</span><span style="color: #3dbceb">a</span></strong>. <em style="font-size: 1.5rem;">(she/her)</em></h2>
         <p>
             <br>
             I'm a <strong>UC Irvine</strong> student majoring in <strong>Game Design & Interactive Media</strong>!
