Added color changing buttons to about me page
- also added more stuff to the welcome, about me1, and about me2 arrays!

--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@ Quotes that make me sound like a lab-grown virus:
     <hr>
 
     <div class="secret">
-        Try clicking the <span class="exampleCustomizable">blue buttons</span> on this website for a surprise!
+        Try clicking the <span id="exampleCustomizable">blue</span> buttons on this website for a surprise!
     </div>
 
 <script src="aboutMeScript.js"></script> 
