--- a/about.html
+++ b/about.html
@@ -56,12 +56,12 @@ title: "About Me"
         <figcaption>HEARTHSTONE</figcaption>
     </div>
     <div class="game">
-        <a href="https://teamfighttactics.leagueoflegends.com/en-us/"><img src="images/CurrentlyPlaying/TFTSeason14.jpg" alt="Teamfight Tactics Season 14 Cover Art"></a>
+        <a href="https://teamfighttactics.leagueoflegends.com/en-us/"><img src="images/CurrentlyPlaying/TFTSet15.jpg" alt="Teamfight Tactics Set 15 Cover Art"></a>
         <figcaption>TEAMFIGHT TACTICS</figcaption>
     </div>
     <div class="game">
-        <a href="https://overwatch.blizzard.com/en-us/"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2 Cover Art"></a>
-        <figcaption>OVERWATCH 2</figcaption>
+        <a href="https://playthebazaar.com/"><img src="images/CurrentlyPlaying/TheBazaar.png" alt="The Bazaar Cover Art"></a>
+        <figcaption>THE BAZAAR</figcaption>
     </div>
 </div>
 
