--- a/diablo.html
+++ b/diablo.html
@@ -7,16 +7,14 @@ title: "Diablo IV"
 </div>
 
 <div class="gamesContainer">
-    <div class="item" style="max-width: 10%;">
+    <div class="gameAsset">
+        <img src="images/DiabloIV/TheButcher.png" alt="The Butcher from Diablo IV with a bow and hearts around him. At the bottom it says 'Fresh Meat'.">
+        <figcaption>"COME BACK LATER!!!"</figcaption>
+    </div>
+    <!--<div div class="gameAsset">
         <img src="images/DiabloIV/MenageristGlyph.png" alt="A screenshot from Diablo 2 featuring a Clay Golem.">
         <figcaption>One of my Spiritborn glyphs!</figcaption>
-    </div>
-    <!--
-    <div class="item" style="max-width: 10%;">
-        <img src="images/DiabloIV/ConsumptionGlyph.png" alt="A screenshot from Diablo 2 featuring a Clay Golem.">
-        <figcaption>Consumption Glyph</figcaption>
-    </div>
-    -->
+    </div>-->
     <div class="item">
         <em>My role:</em>
         <h2><strong>Class Design Intern</strong></h2>
@@ -33,19 +31,20 @@ title: "Diablo IV"
             </ul>
         </p>
     </div>
-
-    <div class="break"></div>
-
+<!--
     <div class="item">
         <h2><em>Season 7 Witchcraft Powers</em></h2>
         <p>
             <em>UNDER CONSTRUCTION!</em>
         </p>
     </div>
-    <div class="item" style="max-width: 20%;">
-        <img src="images/DiabloIV/TheButcher.png" alt="The Butcher from Diablo IV with a bow and hearts around him. At the bottom it says 'Fresh Meat'.">
-        <figcaption>"COME BACK LATER!!!"</figcaption>
+    <div class="item">
+        <h2><em>Spiritborn Paragon Glyphs & Nodes</em></h2>
+        <p>
+            <em>UNDER CONSTRUCTION!</em>
+        </p>
     </div>
+    -->
     <!--
     <div class="item">
         <img src="images/DiabloIV/ClayGolem.webp" alt="A screenshot from Diablo 2 featuring a Clay Golem.">
